# trident-sync

./: .gitignore  LICENSE  cli.py  install.py  pyproject.toml  readme.md  requirements.txt  sync.yaml
.github/workflows/: sync-to-gitee.yml
doc/: pr.md  publish.md
lib/: http.py  logger.py  util.py  util_git.py  version.py
lib/api/: abstract_client.py  gitea.py  gitee.py  github.py  index.py
lib/handler/: helper.py  init.py  remote.py  sync.py
lib/model/: config.py  opts.py  repo.py  sync.py
test/: .gitignore  copy_script.py  main_test.py  pr_test.py  sync-test.yaml  sync.yaml
